new posting about clock methods.

--- a/_posts/2016-05-18-wav-files.md
+++ b/_posts/2016-05-18-wav-files.md
@@ -13,8 +13,10 @@ it off at 19:22pm on the 19th of April 2015 and it ran until 03:50 on
 the 24th.  Each .wav file is 10 minutes long, and just under 20Mb in
 size.
 
-[2 bits per sample, 16000 samples per second, 600 samples per ten
-minute file = 19200000 bytes.]
+[2 bytes per sample, 16,000 samples per second, 600 seconds per ten
+minute file = 19,200,000 bytes per file.  The extra 44 bytes on each
+file is the header, which contains details of the audio - sample rate,
+number of channels etc...]
 
 
 ### Things to note:
@@ -28,13 +30,12 @@ a sample dropped, not a sample overlapped.  This is usually more
 important than guaranteeing timings.
 
 
-#### System aligns files with wall-clock time
+#### Recordings "snap" to wall-clock time
 
 The first file recorded is not a "full" ten minutes, it's shorter.
 This is to get the unit in "sync" with wallclock time, so that each
 file represents a 10 minute segment from (say 9:00am to 9:10am).  This
 makes processing in the lab later more intuitive.
-
 
 ### How to listen
 
